=============================================================
Version 3.2.2
=============================================================

    - Feature: [import] Addition of order types in the order management screen
    - Feature: [import] Addition of the currency conversion option in the order option panel
    - Bugfix: Add isset in case some var were unset causing multiple php notice

=============================================================
Version 3.2.1
=============================================================

    - Bugfix: [export] Change condition for find combinations attributes
    - Bugfix: Addition of the http 201 code in the success codes

=============================================================
Version 3.2.0
=============================================================

    - Feature: Adding compatibility with php 7.3
    - Feature: [import] Protection of the import of anonymized orders
    - Feature: [import] Protection of the import of orders older than 3 months
    - Feature: Refactoring and optimization of the connector class
    - Feature: Optimization of API calls for synchronisation of orders and actions
    - Feature: Display of an alert when the plugin is no longer up to date
    - Feature: Renaming from Preprod Mode to Debug Mode
    - Bugfix: Refactoring and optimization of dates with the correct locale
    - Bugfix: [import] Enhanced security for orders that change their marketplace name

=============================================================
Version 3.1.4
=============================================================

    - Bugfix: [import] Removed compatibility with version 3 of the Mondial Relay plugin

=============================================================
Version 3.1.3
=============================================================

    - Feature: [import] vat number registration on delivery and billing addresses
    - Bugfix: Recovery of all active shops when searching by token