@@ -81,7 +81,7 @@ body.lengow_body #main {
 }
 
 #container {
-  width: 1300px;
+  width: 1450px;
   margin: 0 auto 2em auto;
   text-align: left;
 }
